removed endorsed directory for java 9 (#6107)
git-svn-id: svn://svn.caucho.com/home/svn/svnroot/resin/trunk@10583 9c94448d-38f1-0310-a231-d98308ff1ebf